kubernetes/lx-annotate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lx-annotate-web
  labels:
    app.kubernetes.io/name: lx-annotate
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lx-annotate
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
